# mayfly-agent

./: Cargo.toml  README.md
deploy/: README.md  install.sh  uninstall.sh
deploy/docker/: Dockerfile.host  Dockerfile.server  docker-compose.yml  host-entrypoint.sh  run-integration.sh
deploy/systemd/: mayfly-agent.service  mayfly-helper.service
src/: clock.rs  config.rs  errors.rs  golden_vectors.rs  lib.rs  logging.rs  main.rs  security.rs  state.rs  tls.rs
src/helper/: client.rs  mod.rs  ops.rs  ops_tests.rs  protocol.rs  server.rs  sshd_control.rs
src/identity/: api_client.rs  enrollment.rs  keypair.rs  machine.rs  mod.rs
src/ipc/: client.rs  mod.rs  protocol.rs
src/platform/: linux.rs  mod.rs  systemd.rs
src/protocol/: ca_bundle.rs  ca_sync.rs  ca_sync_tests.rs  heartbeat.rs  mod.rs  signing.rs
src/service/: agent.rs  backoff.rs  daemon.rs  mod.rs  runtime_state.rs  scheduler.rs  shutdown.rs  validation.rs
src/ssh/: mod.rs  sshd_config.rs  trusted_ca.rs
tests/: ca_sync_integration.rs  daemon_runtime_integration.rs
